--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 
 services:
@@ -6,13 +6,14 @@ services:
     image: postgres:12.4
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-      - static_volume:/home/app/web/static
-      - media_volume:/home/app/web/media
     env_file:
       - ./.env
   web:
     build: .
     restart: always
+    volumes:
+      - static_volume:/code/static
+      - media_volume:/code/media
     command: gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
     ports:
       - "8000:8000"
@@ -21,15 +22,15 @@ services:
     env_file:
       - ./.env
   nginx:
-    image: nginx:1.19.2
+    build: ./nginx
     volumes:
       - static_volume:/home/app/web/static
       - media_volume:/home/app/web/media
     ports:
-      - 1337:80
+      - 80:80
     depends_on:
       - web
-      
+
 volumes:
   postgres_data:
   static_volume:
